--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-sticky-el": "^2.0.9",
+    "web-vitals": "^1.1.2",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
