--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-sticky-el": "^2.0.9",
+    "react-webcam-barcode-scanner": "0.0.2-rc2",
     "web-vitals": "^1.1.2",
     "wowjs": "^1.1.3"
   },
