--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-sticky-el": "^2.0.9",
     "react-webcam-barcode-scanner": "0.0.2-rc2",
+    "recompose": "^0.30.0",
     "web-vitals": "^1.1.2",
     "wowjs": "^1.1.3"
   },
