--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-google-maps": "^9.4.5",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
